--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-python-dotenv
-langchain
-langchain-google-genai
-gTTS
-streamlit-mic-recorder
-openai-whisper
+streamlit==1.50.0
+python-dotenv==1.1.1
+langchain==0.0.354
+langchain-google-genai==0.0.11
+gTTS==2.5.4
+streamlit-mic-recorder==0.0.8
+openai-whisper==20250625
